cli/tests/testdata/error_syntax.js

// deno-fmt-ignore-file
(the following is a syntax error  ^^ ! )
